--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <header class="cabecalho">
+      <nav class="cabecalhoNav">
+        <a class="cabecalhoNavLinks" href="">Home</a>
+        <a class="cabecalhoNavLinks" href="">Sobre mim</a>
+      </nav>
+    </header>
     <main class="apresetacao">
       <section class="apresetacaoConteudo">
         <h1 class="apresetacaoTitulo">
@@ -24,12 +29,22 @@
         </p>
 
         <div class="apresetacaoLink">
-          <a class="apresetacaoBtnLinks" href="https://www.instagram.com/gfruc_/">Instagram</a>
-          <a class="apresetacaoBtnLinks" href="https://github.com/Fructuozo">GitHub</a>
-        </div>
+          <h2 class="aprese">Acesse minhas redes:</h2>
+          <a class="apresetacaoBtnLinks" href="https://github.com/Fructuozo">
+            <img src="assets/github.png">
+            Github
+        </a>
+        <a class="apresetacaoBtnLinks" href="https://www.linkedin.com/in/gabriel-fructuozo/">
+            <img src="assets/linkedin.png">
+            linkedin
+        </a>
+        <a class="apresetacaoBtnLinks" href="https://www.instagram.com/gfruc_/">
+            <img src="assets/instagram.png">
+            Instagram
+        </a>
           
     </section>
-      <img src="1675315059567.jpeg" alt="Foto do Gabriel programando" />
+      <img class="imagemPerfil" src="assets/perfil.jpeg" alt="Foto do Gabriel" />
     </main>
 
     <footer></footer>
